# operating-system-lab-2

./: CMakeLists.txt  README.md
lib/: os_2.h
src/: consumer.cpp  main.cpp  os_2.cpp  producer.cpp
